--- a/package.json
+++ b/package.json
@@ -9,12 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.9",
+    "@react-hooks-library/core": "^0.5.1",
     "@types/node": "20.6.2",
-    "@types/react": "18.2.21",
+    "@types/react": "^18.2.21",
     "@types/react-dom": "18.2.7",
+    "animate.css": "^4.1.1",
+    "framer-motion": "^10.16.4",
     "next": "13.4.19",
+    "nextjs-current-url": "^1.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.16.0",
+    "react-use-scroll-direction": "^0.1.0",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "sass": "^1.67.0"
   }
 }
