--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "theme-goods",
+  "name": "travelling",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -19,10 +19,12 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "18.2.7",
     "animate.css": "^4.1.1",
+    "mongodb": "^6.1.0",
     "next": "13.4.19",
     "nextjs-current-url": "^1.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "react-use-scroll-direction": "^0.1.0",
     "sass": "^1.68.0",
     "typescript": "5.2.2"
