--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DB = 'mongodb+srv://hoangviethung071195:hungnho123@project0.anbpvsu.mongodb.net/travelling'
+API_ENDPOINT = 'https://nextjs-themesgood.vercel.app/api
