--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nextjs-current-url": "^1.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "react-use-scroll-direction": "^0.1.0",
     "sass": "^1.68.0",
